[gd_scene load_steps=12 format=2]

[ext_resource path="res://Boss1.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Black HealthBar background.png" type="Texture" id=2]
[ext_resource path="res://small_enemy_hpbar.png" type="Texture" id=3]
[ext_resource path="res://Graphics/Boss/Boss1.png" type="Texture" id=4]
[ext_resource path="res://Death_animator.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 42.5

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11, 58 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 2.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1.5, 2.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3.5, 55 )

[node name="Boss" type="RigidBody2D"]
script = ExtResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -40.0
margin_top = -176.0
margin_right = -20.0
margin_bottom = -172.0
rect_scale = Vector2( 4, 4 )
value = 100.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 6, -55 )
frames = SubResource( 1 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Arm" type="CollisionShape2D" parent="."]
position = Vector2( 0, -95 )
shape = SubResource( 3 )

[node name="ArmHook" type="CollisionShape2D" parent="."]
position = Vector2( 20, -151 )
shape = SubResource( 4 )

[node name="ArmHookTip" type="CollisionShape2D" parent="."]
position = Vector2( 30, -151 )
shape = SubResource( 6 )

[node name="Spikes" type="CollisionShape2D" parent="."]
position = Vector2( 14, -94 )
shape = SubResource( 5 )

[node name="AnimationPlayer" parent="." instance=ExtResource( 5 )]

[connection signal="body_shape_entered" from="." to="." method="_on_Boss_body_shape_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
